--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+*{
+ margin: 0; 
+ padding: 0;
+ box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  font-family: 'Poppins', sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+  max-width: 1100px;
+  width: 100%;
+  margin: auto;
+  padding: 0.5rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar{
+  display: flex;
+  justify-content: space-around;
+  padding: 1.25rem 0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin-bottom: 2rem;
+  align-items: center;
+  /* background: rgb(243, 243, 243); */
+}
+.nav{
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+}
+.nav li a{
+  text-decoration: none;
+  color: rgb(157, 157, 157);
+  font-size: 1.1rem;
+  transition: 0.3s ease;
+}
+.nav li a.active{
+  color: #000
+}
+.nav li{
+  position: relative;
+  padding: 0.5rem;
+} 
+.nav li:after{
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  bottom: 0px;
+  height: 2px;
+  width: 0%;
+  background: grey;
+  transition: 0.3s ease;
+}
+.nav li a:hover{
+  color: rgb(105, 105, 105);
+}
+.nav li:hover::after{
+  width: 100%;
+}
+.addNote{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* border: 1px solid grey; */
+  padding: 1.25rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.addNote > div{
+  margin: 0.5rem 0;
+}
+.addNote input, textarea{
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;  
+  font-family: 'Poppins', sans-serif;
+  border: 1px solid rgb(195, 195, 195);
+  outline: none;
+  border-radius: 0.2rem;
+  box-shadow: 0 0 5px rgba(116, 116, 116, 0.2);
+}
+.addNote .addBtn{
+  padding: 0.5rem 0;
+}
+.notes{
+  display: flex;
+  /* flex-direction: column; */
+  gap: 2rem;
+  justify-content: space-between;
+  margin: 2rem 0;
+  flex-wrap: wrap;
+}
+.note{
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  border-radius: 0.444rem;
+  width: 500px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
