--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body{
   justify-content: space-around;
   padding: 1.25rem 0;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
   align-items: center;
   /* background: rgb(243, 243, 243); */
 }
@@ -72,13 +72,25 @@ body{
   padding: 0.5rem;
   font-size: 1rem;  
   font-family: 'Poppins', sans-serif;
-  border: 1px solid rgb(195, 195, 195);
+  border: 2px solid rgb(191, 191, 191);
+  transition: 0.3s ease;
   outline: none;
+  resize: none;
   border-radius: 0.2rem;
-  box-shadow: 0 0 5px rgba(116, 116, 116, 0.2);
+  /* box-shadow: 0 0 10px rgba(116, 116, 116, 0.2); */
+}
+.addNote input:focus, textarea:focus{
+  border: 2px solid #0096c7;
+  box-shadow: 0 0 5px #0096c7;
 }
 .addNote .addBtn{
   padding: 0.5rem 0;
+  background: #0096c7;
+  border: 2px solid white;
+  font-size: 1.1rem;
+  color: #fff;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 5px #0096c7;
 }
 .notes{
   display: flex;
@@ -95,3 +107,52 @@ body{
   width: 500px;
 }
 
+.actions{
+  display: flex;
+  gap: 1rem;
+  margin: 1rem 0 0 0;
+}
+.actions i {
+  padding: 1rem;
+  font-size: 1.255rem;
+}
+
+.alert{
+  height: 50px;
+  box-shadow: 0 10px 20px rgba(124, 124, 124, 0.5);
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+.alert.red{
+  background-color: red;
+  color: #fff;
+}
+.alert.green{
+  background-color: green;
+  color: #fff;
+}
+.modal{
+  position: fixed;
+  left: 0%;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  background: rgba(24, 24, 24, 0.873);
+  display: flex;
+  justify-content: center;
+  transition: all 0.5s ease;
+  align-items: center;
+}
+.modal-body{
+  max-width: 900px;
+  margin-top: 2rem;
+  background: #fff;
+  width: 100%;
+  /* height: 500px; */
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
+}
